fix the project image issue on mobile version

--- a/src/components/MyWorks/MyWorks.scss
+++ b/src/components/MyWorks/MyWorks.scss
@@ -25,7 +25,7 @@
 
 @media screen and (max-width: 1200px) {
     .projects-container {
-        width: calc(100vw);      
+        width: calc(90vw);      
         margin-left: 0px;
         display: flex;
         align-items: stretch;
